# Good-Robot

./: ButtonImage.h  CMakeLists.txt  Caption.cpp  Caption.h  CircleProgressBar.cpp  CircleProgressBar.h  GameProperty.h  GoodRobot.rc  GoodRobot.sln  GoodRobot.vcxproj  GoodRobot.vcxproj.filters  HighScoreData.h  HoverInfo.cpp  HoverInfo.h  ImageData.cpp  ImageData.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  LICENSE.txt  LocalLeaderboard.cpp  LocalLeaderboard.h  ProgressBar.cpp  ProgressBar.h  README.md  RadioButtonData.cpp  RadioButtonData.h  Rectangle.cpp  Rectangle.h  RectangleProgressBar.cpp  RectangleProgressBar.h  ScoreButton.h  SliderData.cpp  SliderData.h  SteamLeaderboard.cpp  SteamLeaderboard.h  SteamLeaderboardButton.h  SteamLeaderboardData.cpp  SteamLeaderboardData.h  (+188 more)
XCode/SDL OpenGL Application/: Info.plist  SDLMain.m  icons.icns  main.cpp
XCode/SDL OpenGL Application/English.lproj/: InfoPlist.strings
XCode/SDL OpenGL Application/GoodRobot.xcodeproj/: project.pbxproj
XCode/SDL OpenGL Application/GoodRobot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XCode/SDL OpenGL Application/GoodRobot.xcodeproj/project.xcworkspace/xcuserdata/sanchitgulati.xcuserdatad/: UserInterfaceState.xcuserstate
XCode/SDL OpenGL Application/GoodRobot.xcodeproj/xcuserdata/sanchitgulati.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
XCode/SDL OpenGL Application/GoodRobot.xcodeproj/xcuserdata/sanchitgulati.xcuserdatad/xcschemes/: GoodRobot.xcscheme  xcschememanagement.plist
XCode/SDL OpenGL Application/GoodRobot/Images.xcassets/AppIcon.appiconset/: Contents.json
XCode/SDL OpenGL Application/libs/: libfreetype.6.dylib  libfreetype.dylib
freetype/lib/pkgconfig/: freetype2.pc
openal/: FindALUT.cmake
steamworks/: FindSTEAMWORKS.cmake  Readme.txt
steamworks/glmgr/: glmgr.cpp  imageformat.h
steamworks/public/steam/: steam_api.json  steam_api_interop.cs
steamworks/public/steam/lib/win32/: sdkencryptedappticket.lib
steamworks/public/steam/lib/win64/: sdkencryptedappticket64.lib
steamworks/redistributable_bin/: steam_api.lib
steamworks/redistributable_bin/win64/: steam_api64.lib
